bk_ida/gccida/g2/simplify_subtraction
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subtraction/src/varasm.c:4142:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, &val0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subtraction/src/varasm.c:4143:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)v1 + 2), *( rtx *)&v1[1], &val1); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subtraction/src/obj/varasm.o] Error 1
